tests/rosetta/out/Pascal/algebraic-data-types.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/algebraic-data-types.pas
algebraic-data-types.pas(10,34) Error: Identifier not found "any"
algebraic-data-types.pas(10,56) Error: Identifier not found "any"
algebraic-data-types.pas(10,86) Error: Identifier not found "any"
algebraic-data-types.pas(10,89) Error: Type identifier expected
algebraic-data-types.pas(16,30) Error: Incompatible type for arg no. 2: Got "<erroneous type>", expected "Variant"
algebraic-data-types.pas(18,30) Error: Incompatible type for arg no. 2: Got "<erroneous type>", expected "Variant"
algebraic-data-types.pas(23,27) Error: Identifier not found "any"
algebraic-data-types.pas(27,9) Error: Operator is not overloaded: "<erroneous type>" = "Variant"
algebraic-data-types.pas(28,15) Error: Incompatible type for arg no. 1: Got "<erroneous type>", expected "Extended"
algebraic-data-types.pas(29,55) Error: Incompatible type for arg no. 1: Got "Variant", expected "<erroneous type>"
algebraic-data-types.pas(29,111) Error: Incompatible type for arg no. 1: Got "Variant", expected "<erroneous type>"
algebraic-data-types.pas(33,24) Error: Identifier not found "any"
algebraic-data-types.pas(33,30) Error: Identifier not found "any"
algebraic-data-types.pas(49,9) Error: Operator is not overloaded: "<erroneous type>" = "Variant"
algebraic-data-types.pas(50,15) Error: Incompatible type for arg no. 1: Got "<erroneous type>", expected "Extended"
algebraic-data-types.pas(52,10) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(53,10) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(54,10) Error: Operator is not overloaded: "TFPGMap$2$crcA201DD2D" = "Variant"
algebraic-data-types.pas(56,22) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Variant>", expected "Extended"
algebraic-data-types.pas(59,20) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(60,16) Error: Operator is not overloaded: "TFPGMap$2$crcA201DD2D" = "Variant"
algebraic-data-types.pas(62,30) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Variant>", expected "Extended"
algebraic-data-types.pas(65,20) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(66,16) Error: Operator is not overloaded: "TFPGMap$2$crcA201DD2D" = "Variant"
algebraic-data-types.pas(68,30) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Variant>", expected "Extended"
algebraic-data-types.pas(73,10) Error: Operator is not overloaded: "TFPGMap$2$crcA201DD2D" = "Variant"
algebraic-data-types.pas(75,22) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Variant>", expected "Extended"
algebraic-data-types.pas(78,20) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(79,16) Error: Operator is not overloaded: "TFPGMap$2$crcA201DD2D" = "Variant"
algebraic-data-types.pas(81,30) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Variant>", expected "Extended"
algebraic-data-types.pas(84,20) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(85,16) Error: Operator is not overloaded: "TFPGMap$2$crcA201DD2D" = "Variant"
algebraic-data-types.pas(87,30) Error: Incompatible type for arg no. 1: Got "TFPGMap<System.ShortString,System.Variant>", expected "Extended"
algebraic-data-types.pas(96,21) Error: Identifier not found "any"
algebraic-data-types.pas(96,39) Error: Identifier not found "any"
algebraic-data-types.pas(98,10) Error: Operator is not overloaded: "<erroneous type>" = "Variant"
algebraic-data-types.pas(99,14) Error: Illegal qualifier
algebraic-data-types.pas(100,14) Error: Illegal qualifier
algebraic-data-types.pas(105,24) Error: Identifier not found "any"
algebraic-data-types.pas(105,42) Error: Identifier not found "any"
algebraic-data-types.pas(112,16) Error: Incompatible types: got "Int64" expected "TFPGMap<System.ShortString,System.Variant>"
algebraic-data-types.pas(113,72) Error: Incompatible type for arg no. 4: Got "Variant", expected "<erroneous type>"
algebraic-data-types.pas(126,20) Error: Incompatible type for arg no. 1: Got "Variant", expected "<erroneous type>"
algebraic-data-types.pas(129,24) Error: Incompatible type for arg no. 1: Got "Variant", expected "<erroneous type>"
algebraic-data-types.pas(131) Fatal: There were 44 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
